--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,12 +1,12 @@
-  <!--プロフィールのレイアウト-->
+<!--プロフィールのレイアウト-->
 <div class="about-profile">
   <div class="container">
     <div class="space"></div>
     <div class="row">
       <div class="col-8">
         <div id="title-box">
-          <h1 class="profile-title d-none d-lg-block">About</h1>
-          <h1 class="subtitle d-none d-lg-block">About Me</h1>
+          <h1 class="profile-title d-none d-lg-block"><span>About</span></h1>
+          <h1 class="subtitle d-none d-lg-block"><span>About Me</span></h1>
         </div>
       </div>
       <div class="col-4"></div>
