--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div class="toppage font-family">
+<div class="toppage font-family main-bg">
   <div class="container">
     <div class="row">
       <div class="col my-5">
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
           <div class="col pt-4">
-            <%= f.submit '結果を見る', class: 'btn btn-outline-dark' %>
+            <%= f.submit '結果を見る', class: 'btn new-btn' %>
           </div>
         </div>
       <% end %>
@@ -31,7 +31,7 @@
   </div>
 </div>
 <!--このサイトの利用方法-->
-<div class="app-info pt-5 font-family">
+<div class="pt-5 font-family main-bg">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
