--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -41,7 +41,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background:#aabac9;
+  background: #5b75a6;
   border-radius: 5px;
   width: 60px;
   height: 60px;
