--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid font-family investment">
+<div class="container-fluid font-family investment min-vh-100">
   <div class="row pt-5">
     <div class="col text-center">
       <h2>あなたの合う投資先は？</h2>
@@ -11,7 +11,7 @@
       <div class="row text-center">
         <div class="col"><h6>安定した収入がある</h6></div>
       </div>
-      <div class="row mt-3 text-center">
+      <div class="row pt-3 text-center">
         <div class="col-2"></div>
         <div class="col" id="question1-yes-show"><span class="btn btn-outline-dark">YES</span></div>
         <div class="col" id="question1-no-show"><span class="btn btn-outline-dark">NO</span></div>
@@ -69,23 +69,23 @@
   <div class="row pt-2 pb-5 text-center">
     <div class="col trust-modal">
       <span class="btn btn-outline-dark close-modal mr-3">もう一度診断をする</span>
-      <%= link_to '特徴や情報', trust_path, class: 'btn btn-outline-dark' %>
+      <%= link_to '特徴や情報', trust_path, class: 'btn new-btn' %>
     </div>
     <div class="col stock-modal">
       <span class="btn btn-outline-dark close-modal mr-3">もう一度診断をする</span>
-      <%= link_to '特徴や情報', stock_path, class: 'btn btn-outline-dark' %>
+      <%= link_to '特徴や情報', stock_path, class: 'btn new-btn' %>
     </div>
     <div class="col asset-modal">
       <span class="btn btn-outline-dark close-modal mr-3">もう一度診断をする</span>
-      <%= link_to '特徴や情報', asset_path, class: 'btn btn-outline-dark' %>
+      <%= link_to '特徴や情報', asset_path, class: 'btn new-btn' %>
     </div>
     <div class="col nisa-modal">
       <span class="btn btn-outline-dark close-modal mr-3">もう一度診断をする</span>
-      <%= link_to '特徴や情報', nisa_path, class: 'btn btn-outline-dark' %>
+      <%= link_to '特徴や情報', nisa_path, class: 'btn new-btn' %>
     </div>
-    <div class="col deposit-modal">
+    <div class="col deposit-modal pb-5">
       <span class="btn btn-outline-dark close-modal mr-3">もう一度診断をする</span>
-      <%= link_to '特徴や情報', deposit_path, class: 'btn btn-outline-dark' %>
+      <%= link_to '特徴や情報', deposit_path, class: 'btn new-btn' %>
     </div>
   </div>
 </div>
