--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container min-vh-100">
   <%= form_with model: @post, local:true do |f| %>
   <div class="row py-5">
     <div class="col-2"></div>
@@ -6,7 +6,7 @@
       <div class="row pb-4">
         <div class="col-2"><%= link_to '', post_path(@post.id), class: 'all-btn fas fa-times fa-2x' %></div>
         <div class="col-6"><h4>投稿内容を編集</h4></div>
-        <div class="col-2"><%= f.submit '保存', class: 'btn btn-outline-dark' %></div>
+        <div class="col-2"><%= f.submit '保存', class: 'btn new-btn' %></div>
       </div>
       <div class="row">
         <label>
