--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container min-vh-100">
   <div class="row">
     <div class="col">
       <div class="row pt-5">
@@ -27,7 +27,7 @@
         </label>
         </div>
         <div class="col-3">
-          <%= f.submit '投稿', class: 'btn btn-outline-dark' %>
+          <%= f.submit '投稿', class: 'btn new-btn' %>
         </div>
       </div>
       <% end %>
