--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid min-vh-100">
   <div class="row py-5">
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
