--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="row py-5">
+<div class="container-fluid min-vh-100">
+  <div class="row pt-5">
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
         <div class="col">
@@ -80,7 +80,7 @@
       <% end %>
     <% end %>
     </div>
-    <div class="col-3 d-none d-lg-block">
+    <div class="col-2 d-none d-lg-block">
       <%= render 'search/searchbar' %>
     </div>
   </div>
