--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -5,7 +5,7 @@
   <div class="col-3"></div>
   <% if user.id == current_user.id %>
     <div class="col-4">
-      <%= link_to 'プロフィールの編集', edit_user_path(user.id), class: 'btn btn-outline-dark d-none d-lg-block' %>
+      <%= link_to 'プロフィールの編集', edit_user_path(user.id), class: 'btn new-btn d-none d-lg-block' %>
       <%= link_to '', edit_user_path(user.id), class: 'all-btn fas fa-user-edit fa-2x d-lg-none' %>
     </div>
   <% else %>
