--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="row py-5">
+<div class="container-fluid min-vh-100">
+  <div class="row pt-5">
     <!--サイドバー一覧-->
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
