--- a/app/views/homes/asset.html.erb
+++ b/app/views/homes/asset.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-6 text-center">
-      <%= image_tag 'top22.png', width: '100%', height: '100%' %>
+      <%= image_tag 'top15.png', width: '100%', height: '100%' %>
     </div>
     <div class="col">
       <div class="row">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="row py-3">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>投資信託の主な投資先</h1>
     </div>
@@ -36,12 +36,12 @@
     <div class="col-10">
       <table class="table table-striped" style="table-layout:fixed;">
         <tr>
-          <th class="table-success text-center" style="width:100px;"></th>
-          <th class="table-success text-center" style="width:200px;">投資先</th>
-          <th class="table-success text-center" style="width:200px;">過去の年平均リターン例</th>
+          <th class="table-header text-center" style="width:100px;"></th>
+          <th class="table-header text-center" style="width:200px;">投資先</th>
+          <th class="table-header text-center" style="width:200px;">過去の年平均リターン例</th>
         </tr>
         <tr>
-          <th class="table-success text-center" style="width:100px;">
+          <th class="table-header text-center" style="width:100px;">
             <li>国内株式型</li>
           </th>
           <th class="text-center" style="width:200px;">
@@ -52,7 +52,7 @@
           </th>
         </tr>
         <tr>
-          <th class="table-success text-center" style="width:100px;">
+          <th class="table-header text-center" style="width:100px;">
             <li>外国株式型</li>
           </th>
           <th class="text-center" style="width:200px;">
@@ -63,7 +63,7 @@
           </th>
         </tr>
         <tr>
-          <th class="table-success text-center" style="width:100px;">
+          <th class="table-header text-center" style="width:100px;">
             <li>国内債券型</li>
           </th>
           <th class="text-center" style="width:200px;">
@@ -73,7 +73,7 @@
             <li>2%程度</li>
           </th>
         </tr><tr>
-          <th class="table-success text-center" style="width:100px;">
+          <th class="table-header text-center" style="width:100px;">
             <li>外国債券型</li>
           </th>
           <th class="text-center" style="width:200px;">
@@ -84,7 +84,7 @@
           </th>
         </tr>
         <tr>
-          <th class="table-success text-center" style="width:100px;">
+          <th class="table-header text-center" style="width:100px;">
             <li>資産分散型<br>(バランス型)</li>
           </th>
           <th class="text-center" style="width:200px;">
@@ -108,8 +108,8 @@
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
-          <th class="table-success text-center" style="width:200px;">メリット</th>
-          <th class="table-success text-center" style="width:200px;">デメリット</th>
+          <th class="table-header text-center" style="width:200px;">メリット</th>
+          <th class="table-header text-center" style="width:200px;">デメリット</th>
         </tr>
         <tr>
           <th style="width:200px;">
@@ -127,7 +127,7 @@
     </div>
     <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row">
+  <div class="row pb-5">
     <div class="col">
       <p>
         【2021最新・徹底比較】投資信託がおすすめの証券会社ランキングサイト
@@ -135,4 +135,4 @@
       </p>
     </div>
   </div>
-</div>s
+</div>
