--- a/app/views/homes/nisa.html.erb
+++ b/app/views/homes/nisa.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-6 text-center">
-      <%= image_tag 'top19.png', width: '100%', height: '100%' %>
+      <%= image_tag 'top10.png', width: '100%', height: '100%' %>
     </div>
     <div class="col-10 col-md-6">
       <div class="row">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="row py-3">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>つみたてNISAのメリットデメリット</h1>
     </div>
@@ -36,8 +36,8 @@
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
-          <th class="table-success text-center" style="width:200px;">メリット</th>
-          <th class="table-success text-center" style="width:200px;">デメリット</th>
+          <th class="table-header text-center" style="width:200px;">メリット</th>
+          <th class="table-header text-center" style="width:200px;">デメリット</th>
         </tr>
         <tr>
           <th style="width:200px;">
@@ -54,7 +54,7 @@
     </div>
     <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row">
+  <div class="row mb-5">
     <div class="col">
       <p>
         NISA（ニーサ）口座おすすめランキング＆比較 [2021年06月版]
@@ -73,7 +73,7 @@
   </div>
   <div class="row">
     <div class="col-1"></div>
-    <div class="col-10 col-sm-4 pt-5">
+    <div class="col-10 col-sm-4 pt-5 pb-4">
       <p>
         「個人向け国債」は、国が発行し、元本や利子をお支払いする「国債」のうち、原則として個人の方だけが保有していただける国債です。
         額面金額1万円から1万円単位でご購入いただけます。
@@ -81,12 +81,12 @@
       </p>
     </div>
     <div class="col-12 col-sm-7 text-center">
-      <%= image_tag 'top20.png', width: '100%', height: '100%' %>
+      <%= image_tag 'top12.png', width: '100%', height: '100%' %>
     </div>
   </div>
 </div>
 <div class="container">
-  <div class="row pt-4">
+  <div class="row py-5">
     <div class="col-12 text-center">
       <h2>個人向け国債のメリットデメリット</h2>
     </div>
@@ -96,8 +96,8 @@
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
-          <th class="table-success text-center" style="width:200px;">メリット</th>
-          <th class="table-success text-center" style="width:200px;">デメリット</th>
+          <th class="table-header text-center" style="width:200px;">メリット</th>
+          <th class="table-header text-center" style="width:200px;">デメリット</th>
         </tr>
         <tr>
           <th style="width:200px;">
