--- a/app/views/homes/deposit.html.erb
+++ b/app/views/homes/deposit.html.erb
@@ -6,10 +6,10 @@
   </div>
   <div class="row pt-3">
     <div class="col text-center">
-      <%= image_tag 'top12.png', width: '100%', height: '100%' %>
+      <%= image_tag 'top14.png', width: '100%', height: '100%' %>
     </div>
   </div>
-  <div class="row py-3">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>制限は少ないが金利が低い「定期積立預金」</h1>
     </div>
@@ -26,7 +26,7 @@
     </div>
     <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row py-3 text-center">
+  <div class="row py-5 text-center">
     <div class="col-10">
       <h1>定期積立預金のメリットデメリット</h1>
     </div>
@@ -36,8 +36,8 @@
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
-          <th class="table-success text-center" style="width:200px;">メリット</th>
-          <th class="table-success text-center" style="width:200px;">デメリット</th>
+          <th class="table-header text-center" style="width:200px;">メリット</th>
+          <th class="table-header text-center" style="width:200px;">デメリット</th>
         </tr>
         <tr>
           <th style="width:200px;">
@@ -54,7 +54,7 @@
     </div>
     <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row">
+  <div class="row pb-5">
     <div class="col">
       <p>
         【2021最新・金利比較】金利で選ぶネット銀行おすすめランキング！サイト
