--- a/app/views/homes/stock.html.erb
+++ b/app/views/homes/stock.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-6 text-center">
-      <%= image_tag 'top6.png', width: '100%', height: '100%' %>
+      <%= image_tag 'top13.png', width: '100%', height: '100%' %>
     </div>
     <div class="col-10 col-md-6">
       <div class="row">
@@ -37,8 +37,8 @@
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
-          <th class="table-success text-center" style="width:200px;">メリット</th>
-          <th class="table-success text-center" style="width:200px;">デメリット</th>
+          <th class="table-header text-center" style="width:200px;">メリット</th>
+          <th class="table-header text-center" style="width:200px;">デメリット</th>
         </tr>
         <tr>
           <th style="width:200px;">
@@ -56,7 +56,7 @@
     </div>
     <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row">
+  <div class="row mb-5">
     <div class="col">
       <p>
         初心者におすすめ証券会社ランキングサイト [2021年最新版]
@@ -85,12 +85,12 @@
       </p>
     </div>
     <div class="col-12 col-md-6 text-center">
-      <%= image_tag 'top21.png', width: '100%', height: '100%' %>
+      <%= image_tag 'top16.png', width: '100%', height: '100%' %>
     </div>
   </div>
 </div>
 <div class="container">
-  <div class="row pt-4">
+  <div class="row py-5">
     <div class="col-12 text-center">
       <h2>REIT(リート)のメリットデメリット</h2>
     </div>
@@ -100,8 +100,8 @@
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
-          <th class="table-success text-center" style="width:200px;">メリット</th>
-          <th class="table-success text-center" style="width:200px;">デメリット</th>
+          <th class="table-header text-center" style="width:200px;">メリット</th>
+          <th class="table-header text-center" style="width:200px;">デメリット</th>
         </tr>
         <tr>
           <th style="width:200px;">
