--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid min-vh-100">
-  <div class="row pt-5">
+  <div class="row py-5">
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
         <div class="col">
@@ -45,38 +45,39 @@
       <% end %>
     <% elsif @model == "post" %>
       <% @datas.each do |post| %>
-      <div class="row">
-        <div class="col-12 col-lg-2">
-          <%= link_to user_path(post.user.id) do %>
-          <%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
-          <% end %>
+      <div class="posts-bg mb-4">
+        <div class="row">
+          <div class="col-12 col-lg-2">
+            <%= link_to user_path(post.user.id) do %>
+            <%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
+            <% end %>
+          </div>
+          <div class="col-6 col-md-5"><h5><strong><%= post.user.name %></strong></h5></div>
+          <div class="col-6 col-md-4"><%= post.created_at.strftime('%Y/%m/%d') %></div>
         </div>
-        <div class="col-6 col-md-5"><h5><strong><%= post.user.name %></strong></h5></div>
-        <div class="col-6 col-md-4"><%= post.created_at.strftime('%Y/%m/%d') %></div>
-      </div>
-      <div class="row">
-        <div class="col-2"></div>
-        <div class="col-10">
-          <%= link_to post_path(post.id) do %>
-          <%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %>
-          <% end %>
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-10">
+            <%= link_to post_path(post.id) do %>
+            <%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %>
+            <% end %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-10 py-4 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
+        </div>
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-3 comment-link">
+            <%= link_to '', post_path(post.id), class: 'far fa-comment' %> <%= post.post_comments.count %>
+          </div>
+          <div class="col-3 like-btn<%= post.id %>">
+            <%= render partial: 'likes/like-btn', locals: {post: post} %>
+          </div>
+          <div class="col-3"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-2"></div>
-        <div class="col-10 py-4 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
-      </div>
-      <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3 comment-link">
-          <%= link_to '', post_path(post.id), class: 'far fa-comment' %> <%= post.post_comments.count %>
-        </div>
-        <div class="col-3 like-btn<%= post.id %>">
-          <%= render partial: 'likes/like-btn', locals: {post: post} %>
-        </div>
-        <div class="col-3"></div>
-      </div>
-      <hr>
       <% end %>
     <% end %>
     </div>
