--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid min-vh-100">
-  <div class="row pt-5">
+  <div class="row py-5">
     <!--サイドバー一覧-->
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
@@ -10,8 +10,8 @@
     </div>
     <div class="col-9 col-lg-6 ml-2">
       <%= render 'users/profile', user: @user %>
-      <div class="row">
-        <ul class="user-tabs">
+      <div class="row mb-3">
+        <ul class="col user-tabs">
           <li><%= link_to "投稿", user_path(@user.id) %></li>
           <li class="active"><%= link_to "いいね", user_likes_path(@user.id) %></li>
         </ul>
@@ -19,38 +19,39 @@
       <!--ログインユーザーがいいねした一覧-->
       <% @likes.reverse.each do |like| %>
       <% post = Post.find_by(id: like.post_id) %>
-      <div class="row">
-        <div class="col-12 col-lg-2">
-          <%= link_to user_path(post.user.id) do %>
-          <%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
-          <% end %>
+      <div class="posts-bg mb-4">
+        <div class="row">
+          <div class="col-12 col-lg-2">
+            <%= link_to user_path(post.user.id) do %>
+            <%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
+            <% end %>
+            </div>
+          <div class="col-6 col-md-5"><h5><strong><%= post.user.name %></strong></h5></div>
+          <div class="col-6 col-md-4"><%= post.created_at.strftime('%Y/%m/%d') %></div>
+        </div>
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-10">
+            <%= link_to post_path(post.id) do %>
+            <%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %>
+            <% end %>
           </div>
-        <div class="col-6 col-md-5"><h5><strong><%= post.user.name %></strong></h5></div>
-        <div class="col-6 col-md-4"><%= post.created_at.strftime('%Y/%m/%d') %></div>
-      </div>
-      <div class="row">
-        <div class="col-2"></div>
-        <div class="col-10">
-          <%= link_to post_path(post.id) do %>
-          <%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %>
-          <% end %>
+        </div>
+        <div class="row pb-4">
+          <div class="col-2"></div>
+          <div class="col-10 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
+        </div>
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-3 comment-link">
+            <%= link_to '', post_path(post.id), class: 'far fa-comment' %> <%= post.post_comments.count %>
+          </div>
+          <div class="col-3 like-btn<%= post.id %>">
+            <%= render partial: 'likes/like-btn', locals: {post: post} %>
+          </div>
+          <div class="col-3"></div>
         </div>
       </div>
-      <div class="row pb-4">
-        <div class="col-2"></div>
-        <div class="col-10 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
-      </div>
-      <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3 comment-link">
-          <%= link_to '', post_path(post.id), class: 'far fa-comment' %> <%= post.post_comments.count %>
-        </div>
-        <div class="col-3 like-btn<%= post.id %>">
-          <%= render partial: 'likes/like-btn', locals: {post: post} %>
-        </div>
-        <div class="col-3"></div>
-      </div>
-      <hr>
       <% end %>
     </div>
     <!--検索機能-->
