--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid min-vh-100">
-  <div class="row pt-5">
+  <div class="row py-5">
     <!--サイドバー一覧-->
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
@@ -10,7 +10,7 @@
     </div>
     <div class="col-9 col-lg-6 ml-2">
       <%= render 'users/profile', user: @user %>
-      <div class="row">
+      <div class="row mb-3">
         <ul class="col user-tabs">
           <li class="active"><%= link_to "投稿", user_path(@user.id) %></li>
           <li><%= link_to "いいね", user_likes_path(@user.id) %></li>
