--- a/app/views/homes/deposit.html.erb
+++ b/app/views/homes/deposit.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container min-vh-100">
   <div class="row py-5">
-    <div class="col text-center">
-      <h1>投資の前に定期預金の積み立てからの方</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">投資の前に定期預金の積み立てからの方</h1>
     </div>
   </div>
   <div class="row pt-3">
@@ -17,18 +17,18 @@
   <div class="row py-3">
     <div class="col-1 d-none d-sm-block"></div>
     <div class="col-12 col-sm-10">
-      <p>
+      <p class="text-height">
         毎月決まった積立日に、毎月決まった積立額を普通預金から自動積立します。最低預入額は金融機関によって異なりますが、
         条件に合えば自由に決めることができます。定期預金に対して制限が少ない点も特徴の一つです。その点金利が低いことを理解しておきましょう。<br>
-        途中で出金したり、ボーナスなど随時の資金を上積み預金するといった手続きができるケースもあります。「少しずつ安定的に資産運用がしたい」
+        途中で出金したり、ボーナスなど随時の資金を上積み預金するといった手続きができるケースもあります。<span class="under">「少しずつ安定的に資産運用がしたい」</span>
         といった方におすすめな方法です。
       </p>
     </div>
     <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row py-5 text-center">
+  <div class="row py-5">
     <div class="col-10">
-      <h1>定期積立預金のメリットデメリット</h1>
+      <h1 class="investment-title title-border">定期積立預金のメリットデメリット</h1>
     </div>
   </div>
   <div class="row py-3">
