--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -9,7 +9,7 @@
     <div class="col-3"></div>
     <div class="col-12 col-lg-6">
       <div class="row text-center">
-        <div class="col"><h6>安定した収入がある</h6></div>
+        <div class="col"><h6 class="under-line">安定した収入がある</h6></div>
       </div>
       <div class="row pt-3 text-center">
         <div class="col-2"></div>
@@ -24,8 +24,8 @@
     <div class="col-3"></div>
     <div class="col-12 col-lg-6">
       <div class="row pt-5 text-center">
-        <div class="col time-modal"><h6>忙しいので運用に時間をかけたくない</h6></div>
-        <div class="col life-modal"><h6>６ヶ月〜1年分の生活費の予備資金がある</h6></div>
+        <div class="col time-modal"><h6 class="under-line">忙しいので運用に時間をかけたくない</h6></div>
+        <div class="col life-modal"><h6 class="under-line">６ヶ月〜1年分の生活費の予備資金がある</h6></div>
       </div>
       <div class="row pt-3 text-center">
         <div class="col-2"></div>
@@ -42,9 +42,9 @@
     <div class="col-3"></div>
     <div class="col-12 col-lg-6">
       <div class="row pt-5 text-center">
-        <div class="col down-modal"><h6>値下がりしても落ち着いていられる</h6></div>
-        <div class="col company-modal"><h6>企業の業績を調べるのが好きだ</h6></div>
-        <div class="col regular-modal"><h6>毎月、定期預金の積み立てをしている</h6></div>
+        <div class="col down-modal"><h6 class="under-line">値下がりしても落ち着いていられる</h6></div>
+        <div class="col company-modal"><h6 class="under-line">企業の業績を調べるのが好きだ</h6></div>
+        <div class="col regular-modal"><h6 class="under-line">毎月、定期預金の積み立てをしている</h6></div>
       </div>
       <div class="row pt-3 text-center">
         <div class="col-2"></div>
@@ -60,11 +60,11 @@
     <div class="col-3"></div>
   </div>
   <div class="row pt-5 text-center">
-    <div class="col trust-modal"><h2><strong>投資信託(国内外株式)</strong></h2></div>
-    <div class="col stock-modal"><h2><strong>株式・REIT</strong></h2></div>
-    <div class="col asset-modal"><h2><strong>投資信託(資産分散型)</strong></h2></div>
-    <div class="col nisa-modal"><h2><strong>個人向け国債つみたてNISA</strong></h2></div>
-    <div class="col deposit-modal"><h2><strong>投資の前に定期預金の積み立てから</strong></h2></div>
+    <div class="col trust-modal"><h2 class="number-title"><span class="number">01</span>投資信託(国内外株式)</h2></div>
+    <div class="col stock-modal"><h2 class="number-title"><span class="number">02</span>株式・REIT</h2></div>
+    <div class="col asset-modal"><h2 class="number-title"><span class="number">03</span>投資信託(資産分散型)</h2></div>
+    <div class="col nisa-modal"><h2 class="number-title"><span class="number">04</span>個人向け国債つみたてNISA</h2></div>
+    <div class="col deposit-modal"><h2 class="number-title"><span class="number">05</span>投資の前に定期預金の積み立てから</h2></div>
   </div>
   <div class="row pt-2 pb-5 text-center">
     <div class="col trust-modal">
