--- a/app/views/homes/stock.html.erb
+++ b/app/views/homes/stock.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row py-5">
-    <div class="col text-center">
-      <h1>株式について</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">株式について</h1>
     </div>
   </div>
   <div class="row">
@@ -16,11 +16,11 @@
       </div>
       <div class="row py-3">
         <div class="col">
-          <p>
+          <p class="text-height">
             株式投資とは、証券市場で株式を買って株主になり、経営に参加する権利や配当金を受け取る権利を得ること。
             株式は値上がりした時点で売れば売却益が得られる他、株主自社製品を送るなどの株主優待を行う会社もあります。
             売買は１００株などの単位で行い、1万円程度から100万円前後あります。株価の値動きは大きく、業績が低迷すれば
-            株価は下がり、倒産したらお金は戻りません。日本で株式市場に上場されているのは約3600社、長期的な成長が
+            株価は下がり、<span class="under">倒産したらお金は戻りません。</span>日本で株式市場に上場されているのは約3600社、長期的な成長が
             見込める会社の株式を選ぶのがポイントです。
           </p>
         </div>
@@ -28,8 +28,8 @@
     </div>
   </div>
   <div class="row py-5">
-    <div class="col text-center">
-      <h1>株式のメリットデメリット</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">株式のメリットデメリット</h1>
     </div>
   </div>
   <div class="row my-3">
@@ -72,14 +72,14 @@
 <!--REIT(リート)-->
 <div class="container">
   <div class="row pt-5">
-    <div class="col text-center">
-      <h1>REIT(リート)について</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">REIT(リート)について</h1>
     </div>
   </div>
   <div class="row">
     <div class="col-12 col-md-6 pt-5">
-      <p>
-        複数の投資家から集めたお金でマンションやオフィスビル、商業施設などの不動産を購入し、賃貸収入や売却益などを投資家に還元する金融商品です。
+      <p class="text-height">
+        複数の投資家から集めたお金でマンションやオフィスビル、商業施設などの不動産を購入し、<span class="under">賃貸収入や売却益などを投資家に還元する金融商品</span>です。
         価格は銘柄により10万〜70万円程度、株式のように売買ができます。このREITを複数組み入れた投資信託なら1万円程度から購入できます。
         「Real Estate Investment Trust」の略称で、日本語に訳すと不動産投資信託という意味になります。
       </p>
@@ -91,8 +91,8 @@
 </div>
 <div class="container">
   <div class="row py-5">
-    <div class="col-12 text-center">
-      <h2>REIT(リート)のメリットデメリット</h2>
+    <div class="col">
+      <h1 class="investment-title title-border">REIT(リート)のメリットデメリット</h1>
     </div>
   </div>
   <div class="row py-3">
