--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,11 +22,21 @@
   padding: 0;
   box-sizing: border-;
  }
+// フォントの行幅
+.text-height {
+  line-height: 1.7;
+}
+
+// 下線の装飾
+.under {
+  border-bottom: 3px solid #c41a30;
+}
 
 // フォント設定
 .font-family {
     font-family: Hiragino Maru Gothic ProN W4;
 }
+
 // 英文字はみ出るのを防ぐ
  body {
   word-break: break-all;
@@ -34,7 +44,6 @@
 .main-bg {
   background-color: #f2f0e6;
 }
-
 
 // bootstrapのボタン
 .btn.new-btn {
@@ -54,13 +63,14 @@
 }
 
 
-
 // フラッシュメッセージ
 .notice {
   background-color: rgba(216, 219, 217, 0.4);
+  padding: 20px 0;
 }
 .success {
-  background-color: rgba(201, 194, 224, 0.4);
+  background-color: rgba(255, 255, 255, 1.0);
+  padding: 20px 0;
 }
 .alert {
   background-color: rgba(255, 238, 125, 0.4);
