--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -34,17 +34,23 @@
 }
 
 
+// サイドバーの装飾
+.box-shadow {
+  box-shadow: 0 0 6px gray;
+}
+
+
 // サイドバーの固定
 .sidebar {
-  height:100px;
-  top:10px;
+  height: 100px;
+  top: 10px;
   position: -webkit-sticky;
   position: sticky;
 }
 
 .sidebar-comment {
-  height:200px;
-  top:100px;
+  height: 200px;
+  top: 100px;
   position: -webkit-sticky;
   position: sticky;
 }
