--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -23,16 +23,16 @@
       <div class="col-6"></div>
       <div class="col-5 d-none d-lg-block">
         <h3>メッセージ</h3>
-        <p>
+        <p class="text-height">
           現在コロナの影響もあり今若者のなかで【投資】というワードをよく耳にします。投資に興味を持つことはいいことだと思いますが、
           お金の知識がない若者を中心に詐欺被害の声もそも分多く耳にします。
           ちゃんとした正しい知識を備えていなければ大きな損失を抱えることになる理解しなければなりません。正しくお金についての知識を
-          つけることによって世界が変わるはずです。お金に対して余裕が生まれ、精神的に余裕ができ、最終的には時間的余裕にもつながっていきます。
+          つけることによって<span class="under">今見えている世界が変わるはずです。</span>お金に対して余裕が生まれ、精神的に余裕ができ、最終的には時間的余裕にもつながっていきます。
           このアプリを通じて皆さんと一緒に金融リテラシーを高め自分の想い描く未来に近づいていければという思いを込めて作りました。
         </p>
-        <%= link_to "", "https://twitter.com/sakatai_photo", class: "fab fa-twitter-square fa-2x" %>
-        <%= link_to "", "https://www.instagram.com/sakatai_nano/", class: "fab fa-instagram fa-2x" %>
-        <%= link_to "", "https://www.youtube.com/channel/UCG64l7XRovB-_Fah8mq3HZw", class: "fab fa-youtube fa-2x" %>
+        <%= link_to "", "https://twitter.com/sakatai_photo", class: "fab fa-twitter-square fa-2x all-btn" %>
+        <%= link_to "", "https://www.instagram.com/sakatai_nano/", class: "fab fa-instagram fa-2x all-btn" %>
+        <%= link_to "", "https://www.youtube.com/channel/UCG64l7XRovB-_Fah8mq3HZw", class: "fab fa-youtube fa-2x all-btn" %>
       </div>
     </div>
   </div>
