--- a/app/views/homes/nisa.html.erb
+++ b/app/views/homes/nisa.html.erb
@@ -1,34 +1,34 @@
-<div class="container">
+<div class="container min-vh-100">
   <div class="row py-5">
-    <div class="col text-center">
-      <h1>個人向け国債つみたてNISA</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">個人向け国債つみたてNISA</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-md-6 text-center">
+    <div class="col-12 col-md-7 text-center">
       <%= image_tag 'top10.png', width: '100%', height: '100%' %>
     </div>
-    <div class="col-10 col-md-6">
+    <div class="col-10 col-md-5">
       <div class="row">
         <div class="col pt-5">
-          <h3>つみたてNISAは,投資をしたことがない人<br>を意識したつくりになっている</h3>
+          <h3>つみたてNISAは,投資をしたことがない人を意識したつくりになっている</h3>
         </div>
       </div>
       <div class="row py-3">
         <div class="col">
-          <p>
+          <p class="text-height">
             長期的な視点で、分散された投資信託を活用して資産形成を行う皆さんを国が応援しますよ、というのが「つみたてNISA」です。
             証券会社や銀行、ゆうちょ銀行などの金融機関でNISA口座(非課税口座)を開設し、その口座内のつみたてNISA枠で株式投資信託や
-            ETFを購入していくと、本来約20%の税金がかかる分配金や解約した時の利益が非課税になるという制度です。
-            投資できるのは年間40万までで、非課税保有できる期間は最長20年です。
+            ETFを購入していくと、本来約<span class="under">20%の税金がかかる</span>分配金や解約した時の利益が非課税になるという制度です。
+            投資できるのは<span class="under">年間40万</span>までで、非課税保有できる期間は<span class="under">最長20年</span>です。
           </p>
         </div>
       </div>
     </div>
   </div>
   <div class="row py-5">
-    <div class="col text-center">
-      <h1>つみたてNISAのメリットデメリット</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">つみたてNISAのメリットデメリット</h1>
     </div>
   </div>
   <div class="row py-3">
@@ -67,28 +67,28 @@
 <!--個人向け国債情報-->
 <div class="container">
   <div class="row pt-5">
-    <div class="col text-center">
-      <h1>個人向け国債について</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">個人向け国債について</h1>
     </div>
   </div>
   <div class="row">
     <div class="col-1"></div>
-    <div class="col-10 col-sm-4 pt-5 pb-4">
-      <p>
+    <div class="col-10 col-sm-5 pt-5 pb-4">
+      <p class="text-height">
         「個人向け国債」は、国が発行し、元本や利子をお支払いする「国債」のうち、原則として個人の方だけが保有していただける国債です。
-        額面金額1万円から1万円単位でご購入いただけます。
+        額面金額1万円から<span class="under">1万円単位でご購入</span>できます。
         利子は半年毎のお受け取りで、満期時には元本（額面金額）が目減りすることなく戻ってくるので安心です。
       </p>
     </div>
-    <div class="col-12 col-sm-7 text-center">
+    <div class="col-12 col-sm-6 text-center">
       <%= image_tag 'top12.png', width: '100%', height: '100%' %>
     </div>
   </div>
 </div>
 <div class="container">
   <div class="row py-5">
-    <div class="col-12 text-center">
-      <h2>個人向け国債のメリットデメリット</h2>
+    <div class="col-12">
+      <h1 class="investment-title title-border">個人向け国債のメリットデメリット</h1>
     </div>
   </div>
   <div class="row py-3">
