--- a/app/views/homes/trust.html.erb
+++ b/app/views/homes/trust.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container min-vh-100">
   <div class="row py-5">
-    <div class="col text-center">
-      <h1>投資信託について</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">投資信託について</h1>
     </div>
   </div>
   <div class="row">
@@ -16,9 +16,9 @@
       </div>
       <div class="row py-3">
         <div class="col-10">
-          <p>
+          <p class="text-height">
             投資信託とは、投資家から集めたお金を1つの大きな資金としてまとめ、運用の専門家が株式や債券などに投資・運用します。
-            そして、投資額に応じて利益が還元される金融商品です。投資信託なら1万円程度から始められます。投資信託は複数の株式
+            そして、投資額に応じて利益が還元される金融商品です。<span class="under">投資信託なら1万円程度から始められます。</span>投資信託は複数の株式
             への投資など、分散投資タイプなので、たとえ少額でも自分の持ち分も分散の割合どうりに分散投資されます。
             また、毎月一定額でつみたて購入しれば、さまざまな価格で買付され、さらにリスクを低減できます。
           </p>
@@ -27,8 +27,8 @@
     </div>
   </div>
   <div class="row py-5">
-    <div class="col text-center">
-      <h1>投資信託の主な投資先</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">投資信託の主な投資先</h1>
     </div>
   </div>
   <div class="row py-3">
@@ -99,8 +99,8 @@
     <div class="col-1 d-none d-sm-block"></div>
   </div>
   <div class="row pt-5">
-    <div class="col text-center">
-      <h1>投資信託のメリットデメリット</h1>
+    <div class="col">
+      <h1 class="investment-title title-border">投資信託のメリットデメリット</h1>
     </div>
   </div>
   <div class="row py-5">
