--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -8,6 +8,12 @@
       </div>
     </div>
     <div class="col-9 col-lg-6">
+      <div class="row pb-4">
+        <div class="col">
+          <% new_users = @datas.count - 1 %>
+          <h3><%= new_users %>名のユーザーと繋がりましょう！</h3>
+        </div>
+      </div>
     <% if @model == "user" %>
     <% @datas.each do |user| %>
       <div class="row">
