--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="row py-4">
         <div class="col">
-          <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, class: "rounded-circle", fallback: "no_image.jpg" %>
+          <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, class: "rounded-circle", fallback: "no_image.jpg", size: "100x100" %>
         </div>
       </div>
       <div class="row">
