--- a/app/views/homes/nisa.html.erb
+++ b/app/views/homes/nisa.html.erb
@@ -1,11 +1,11 @@
-<div class="container min-vh-100">
+<div class="container">
   <div class="row py-5">
     <div class="col">
       <h1 class="investment-title title-border">個人向け国債つみたてNISA</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-md-7 text-center">
+    <div class="col-12 col-lg-7 text-center">
       <%= image_tag 'top10.png', width: '100%', height: '100%' %>
     </div>
     <div class="col-10 col-md-5">
