--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -2,6 +2,7 @@
 <div class="about-profile">
   <div class="container-fulid">
     <div class="space"></div>
+    <div class="sub-space"></div>
     <div class="row pl-5">
       <div class="col-8">
         <div id="title-box">
