--- a/app/views/homes/trust.html.erb
+++ b/app/views/homes/trust.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-md-6 text-center">
+    <div class="col-12 col-lg-6 text-center">
       <%= image_tag 'top15.png', width: '100%', height: '100%' %>
     </div>
     <div class="col">
