--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -4,7 +4,7 @@
     <div class="col-2"></div>
     <div class="col-8">
       <div class="row pb-4">
-        <div class="col-2"><%= link_to '', post_path(@post.id), class: 'all-btn fas fa-times fa-2x' %></div>
+        <div class="col-2 pb-4"><%= link_to '', post_path(@post.id), class: 'all-btn fas fa-times fa-3x' %></div>
         <div class="col-6"><h4>投稿内容を編集</h4></div>
         <div class="col-2"><%= f.submit '保存', class: 'btn new-btn' %></div>
       </div>
