--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,8 +3,8 @@
     <div class="col">
       <div class="row pt-5">
         <div class="col-2"></div>
-        <div class="col-8">
-          <%= link_to "", posts_path, class: "all-btn fas fa-times fa-2x" %>
+        <div class="col-8 pt-5 pb-4">
+          <%= link_to "", posts_path, class: "all-btn fas fa-times fa-3x" %>
         </div>
         <div class="col-2"></div>
       </div>
