--- a/app/views/homes/deposit.html.erb
+++ b/app/views/homes/deposit.html.erb
@@ -1,4 +1,4 @@
-<div class="container min-vh-100">
+<div class="container min-vh-100 app-info">
   <div class="row py-5">
     <div class="col">
       <h1 class="investment-title title-border">投資の前に定期預金の積み立てからの方</h1>
