--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid font-family investment min-vh-100">
+<div class="container-fluid font-family investment min-vh-100 app-info">
   <div class="row pt-5">
     <div class="col text-center">
       <h2>あなたの合う投資先は？</h2>
