--- a/app/views/homes/save.html.erb
+++ b/app/views/homes/save.html.erb
@@ -1,4 +1,4 @@
-<div class="container min-vh-100">
+<div class="container min-vh-100 app-info">
   <div class="row pt-5">
     <div class="col-2"></div>
     <div class="col-8 mb-2">
@@ -22,12 +22,13 @@
     <div class="col-2"></div>
   </div>
   <div class="row">
-    <div class="col text-center">
+    <div class="col text-center py-4">
       <h2><strong>チェックが7個以上でお金を貯められるタイプです</strong></h2>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-2"></div>
+    <div class="col-8">
       <p>こちらの項目は貯蓄を増やしていくための有効な心がけやテクニックともなります。貯蓄ができなくて悩んでいる方は、できていない項目を確認をして実行してみましょう！</p>
     </div>
   </div>
