--- a/app/views/homes/stock.html.erb
+++ b/app/views/homes/stock.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container app-info">
   <div class="row py-5">
     <div class="col">
       <h1 class="investment-title title-border">株式について</h1>
@@ -70,7 +70,7 @@
   </div>
 </div>
 <!--REIT(リート)-->
-<div class="container">
+<div class="container app-info">
   <div class="row pt-5">
     <div class="col">
       <h1 class="investment-title title-border">REIT(リート)について</h1>
