--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,8 @@
 <div class="toppage font-family main-bg">
   <div class="container">
     <div class="row">
-      <div class="col my-5">
-        <h2><strong>70歳までに3000万の資産を準備するために毎月いくら積み立てれば良いか</strong></h2>
+      <div class="col-12 my-5">
+        <h1><strong>70歳までに3000万の資産を準備するには毎月いくら積み立てれば良いか簡単シミュレーションしてみよう！</strong></h1>
       </div>
     </div>
     <div class="row">
@@ -33,11 +33,16 @@
 </div>
 <hr>
 <!--このサイトの利用方法-->
-<div class="pt-5 font-family main-bg">
+<div class="pt-5 font-family main-bg app-info">
   <div class="container">
-    <div class="row">
+    <div class="row py-5">
       <div class="col-12 text-center">
         <h1>For beginner</h1>
+      </div>
+    </div>
+    <div class="row py-5">
+      <div class="col text-center">
+        <p>このサイトは金融リテラシーを高める<span class="under size-up">教育型SNSサービス</span>です！</p>
       </div>
     </div>
     <div class="row py-5 text-center">
