--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -10,6 +10,12 @@
     width: 150px;
     height: 150px;
 }
+.app-info p {
+    font-size: 18px;
+}
+.size-up {
+    font-size: 25px;
+}
 video {
     width: 100%;
 }
@@ -57,13 +63,15 @@ video {
 }
 
 // aboutページ
-.about-height {
-    height: 500px;
-}
 // サブタイトル
 .about-subtitle {
-    background-color: #f4f2f1;
+    background-color: rgba(215, 217, 229, 0.8);
     color: #342d31;
+    height: 500px;
+    padding-top: 100px;
+}
+.about-me {
+    background-color: #f4f2f1;
 }
 .sub-text {
     line-height: 2.0;
@@ -76,10 +84,6 @@ video {
 
 
 // プロフィール
-.space {
-    width: 100%;
-    height: 770px;
-}
 .about-profile {
     height: 250vh;
     background-image: image-url('about-sakatai.png');
@@ -120,7 +124,8 @@ video {
 
 // 積立結果文字
 .result {
-    font-size: 45px;
+    font-size: 60px;
+    color: #5b75a6;
 }
 
 
