--- a/app/views/homes/answer.html.erb
+++ b/app/views/homes/answer.html.erb
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col py-5 text-center">
       <% if @result != 0 %>
-        <h3>毎月<strong><span class="result"><%= @result.ceil %>円</span></strong> 積み立てていけば達成できます</h3>
+        <h3>毎月<strong><span class="result"><%= @result.ceil %></span></strong> 円積み立てていけば達成できます</h3>
       <% else %>
         <h3>【正しく入力していないか、条件を確認してください】</h3>
       <% end %>
