--- a/app/views/homes/asset.html.erb
+++ b/app/views/homes/asset.html.erb
@@ -1,4 +1,4 @@
-<div class="container min-vh-100">
+<div class="container min-vh-100 app-info">
   <div class="row py-5">
     <div class="col">
       <h1 class="investment-title title-border">投資信託について</h1>
