--- a/app/views/homes/nisa.html.erb
+++ b/app/views/homes/nisa.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container app-info">
   <div class="row py-5">
     <div class="col">
       <h1 class="investment-title title-border">個人向け国債つみたてNISA</h1>
@@ -65,7 +65,7 @@
   </div>
 </div>
 <!--個人向け国債情報-->
-<div class="container">
+<div class="container app-info">
   <div class="row pt-5">
     <div class="col">
       <h1 class="investment-title title-border">個人向け国債について</h1>
