--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -2,7 +2,7 @@
   <div class="row pt-5">
     <div class="col text-center">
       <h2>あなたの合う投資先は？</h2>
-      <p>何が自分にあった投資なのか、チャートでチェックしてみまましょう！</p>
+      <p>何が自分にあった投資なのか、チャートでチェックしてみましょう！</p>
     </div>
   </div>
   <div class="row pt-2">
