--- a/app/views/homes/nisa.html.erb
+++ b/app/views/homes/nisa.html.erb
@@ -75,7 +75,7 @@
     <div class="col-1"></div>
     <div class="col-10 col-sm-5 pt-5 pb-4">
       <p class="text-height">
-        「個人向け国債」は、国が発行し、元本や利子をお支払いする「国債」のうち、原則として個人の方だけが保有していただける国債です。
+        「個人向け国債」は、国が発行し、元本や利子をお支払いする「国債」のうち、原則として個人の方だけが保有できる国債です。
         額面金額1万円から<span class="under">1万円単位でご購入</span>できます。
         利子は半年毎のお受け取りで、満期時には元本（額面金額）が目減りすることなく戻ってくるので安心です。
       </p>
