--- a/app/views/homes/asset.html.erb
+++ b/app/views/homes/asset.html.erb
@@ -20,7 +20,7 @@
             投資信託とは、投資家から集めたお金を1つの大きな資金としてまとめ、運用の専門家が株式や債券などに投資・運用します。
             そして、投資額に応じて利益が還元される金融商品です。<span class="under">投資信託なら1万円程度から始められます。</span>投資信託は複数の株式
             への投資など、分散投資タイプなので、たとえ少額でも自分の持ち分も分散の割合どうりに分散投資されます。
-            また、毎月一定額でつみたて購入しれば、さまざまな価格で買付され、さらにリスクを低減できます。
+            また、毎月一定額でつみたて購入すれば、さまざまな価格で買付され、さらにリスクを低減できます。
           </p>
         </div>
       </div>
