--- a/app/views/homes/save.html.erb
+++ b/app/views/homes/save.html.erb
@@ -1,7 +1,7 @@
 <div class="container min-vh-100 app-info">
   <div class="row pt-5">
     <div class="col">
-      <h1>まずは投資に回せる余剰金を作れるよう意識してみましょう！</h1>
+      <h1>まずは投資に回せる余剰金を作れるよう意識してみましょう</h1>
     </div>
   </div>
   <div class="row pt-5">
