--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -31,7 +31,7 @@
         </div>
         <div class="row">
           <div class="col-2"></div>
-          <div class="col-10">
+          <div class="col-10 pr-5">
             <%= link_to post_path(post.id) do %>
             <%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %>
             <% end %>
