--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,11 @@
   padding: 0;
   box-sizing: border-;
  }
+
+// aタグの下線を消す
+a:hover {
+  text-decoration: none;
+}
 // フォントの行幅
 .text-height {
   line-height: 1.7;
@@ -119,12 +124,12 @@
   width: 100%;
   text-align: center;
   /*要素を天地中央寄せ*/
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
   /*見た目の調整*/
   color:#fff;
   text-shadow: 0 0 15px #666;
-  font-size: 225px;
+  font-size: 210px;
   letter-spacing: 0.1em;
 }
